# cpp_testing_sample

./: .gitlab-ci.yml  README.md
Generator/: CMakeLists.txt
